# Projectweek---DOT-Swahili

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check_sms.py  check_tables.py  docker-compose.yml  pyproject.toml  seed_demo_feedback.ps1  test_db.py  tunnel_log.txt
alembic/: env.py
alembic/versions/: 20260317_01_initial.py
app/: main.py
app/api/: dependencies.py  router.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  alert.py  enums.py  farmer.py  farmer_feedback.py  location.py  risk_rule.py  simulation_event.py  sms_message.py  weather_observation.py
app/repositories/: __init__.py  alert_repository.py  farmer_repository.py  feedback_repository.py  location_repository.py  risk_rule_repository.py  simulation_repository.py  sms_repository.py  weather_repository.py
app/schemas/: __init__.py  alert.py  farmer.py  feedback.py  intake.py  location.py  simulation.py  sms.py  voice.py  weather.py
app/scripts/: seed.py
app/services/: __init__.py  alert_engine.py  daily_forecast_delivery_service.py  feedback_parser.py  scheduler_service.py  (+7 more)
frontend/: feedback-groups.html  feedback-groups.js  forecast-delivery.html  forecast-delivery.js  messages-live.html  messages-live.js  nav.js  rain-live.html  rain-live.js  style.css
tests/: conftest.py  test_alert_engine.py  test_feedback_parser.py  test_feedback_signal_service.py  test_integration_flow.py  test_simulation_service.py  test_sms_shortcode_inbound.py  test_weather_message_classifier.py  test_weather_provider.py
(+15 files in other folders)
