[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dot-swahili-api"
version = "0.1.0"
description = "Early warning backend for East Africa smallholder farmers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.16.5",
  "apscheduler==3.11.0",
  "asyncpg==0.30.0",
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "psycopg[binary]==3.2.9",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "python-json-logger==3.3.0",
  "python-multipart==0.0.20",
  "sqlalchemy==2.0.43",
  "uvicorn[standard]==0.35.0"
]

[project.optional-dependencies]
dev = [
  "aiosqlite==0.21.0",
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "pytest-cov==6.2.1",
  "ruff==0.12.10"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
